# learning_rebuild

./: CMakeLists.txt  README.md
doc/: doc.md
include/glad/: glad.h
lib/: glfw3.lib
shader/: alphafs.glsl  fs.glsl  objectvs.glsl  vs.glsl
src/: camera.cpp  camera.h  controller.cpp  controller.h  glad.c  globals.h  main.cpp  main.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  scene_colorrect.cpp  scene_colorrect.h  scene_cube.cpp  scene_cube.h  scene_depth.cpp  scene_depth.h  scene_light.cpp  scene_light.h  scene_model.cpp  scene_model.h  scene_stencil.cpp  scene_stencil.h  scene_texturerect.cpp  scene_texturerect.h  scenecontroller.cpp  scenecontroller.h  scenemgr.cpp  scenemgr.h  shader.cpp  shader.h  stb_image.h  texture.cpp  texture.h  utils.cpp  utils.h
src/scene/: scene.h  scene_colorrect.cpp  scene_colorrect.h  scene_cube.cpp  scene_cube.h  scene_depth.cpp  scene_depth.h  scene_light.cpp  scene_light.h  scene_model.cpp  scene_model.h  scene_texturerect.cpp  scene_texturerect.h
src/shader/: colorfs.glsl  cubevs.glsl  depthfs.glsl  lampvs.glsl  objectfs.glsl  objectvs.glsl  stencilfs.glsl  texfs.glsl  texvs.glsl  vs.glsl
